[gd_scene load_steps=15 format=3 uid="uid://ltkl8jrm43r"]

[ext_resource type="Script" uid="uid://br7wudnxrqnnk" path="res://Game/Player/rebound_spear/rebound_spear_projectile.gd" id="1_01bqf"]
[ext_resource type="Texture2D" uid="uid://clmrbc4wqymh3" path="res://assets/player/weapons/rebound_spear.png" id="1_binhh"]
[ext_resource type="Shader" uid="uid://iavd7ooijp81" path="res://Game/Interactive Objects/outline.gdshader" id="2_6min1"]
[ext_resource type="Script" uid="uid://cdwmtd1e7j5gn" path="res://Game/damage_dealer.gd" id="2_stc4m"]
[ext_resource type="Script" uid="uid://credaa611kp8c" path="res://Game/Interactive Objects/pickupable_weapon.gd" id="4_8b5mk"]
[ext_resource type="Texture2D" uid="uid://cjf6morhojiyc" path="res://Game/Interactive Objects/PickUp.png" id="6_vxkd3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vxkd3"]
shader = ExtResource("2_6min1")
shader_parameter/active = false
shader_parameter/outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_6min1"]
atlas = ExtResource("1_binhh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b5mk"]
atlas = ExtResource("1_binhh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vxkd3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6min1")
}],
"loop": true,
"name": &"Rebound",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b5mk")
}],
"loop": true,
"name": &"Throw",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stc4m"]
size = Vector2(13, 3)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_01bqf"]
radius = 14.0
height = 62.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6min1"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vxkd3"]

[node name="ReboundSpear" type="CharacterBody2D"]
script = ExtResource("1_01bqf")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_vxkd3")
sprite_frames = SubResource("SpriteFrames_vxkd3")
animation = &"Throw"

[node name="SolidCollision" type="CollisionShape2D" parent="."]
position = Vector2(3.5, -0.5)
shape = SubResource("RectangleShape2D_stc4m")

[node name="DamageDealer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource("2_stc4m")
damage = 70.0
metadata/_custom_type_script = "uid://cdwmtd1e7j5gn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDealer"]
position = Vector2(2, 0)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_01bqf")
debug_color = Color(0.9823169, 0, 0.36746094, 0.41960785)

[node name="PickupableWeapon" type="RigidBody2D" parent="." node_paths=PackedStringArray("outlined_node")]
collision_layer = 0
collision_mask = 0
mass = 0.001
physics_material_override = SubResource("PhysicsMaterial_6min1")
gravity_scale = 0.0
script = ExtResource("4_8b5mk")
id = &"Spear"
outlined_node = NodePath("../Sprite")
disable_indicator = true
metadata/_custom_type_script = "uid://credaa611kp8c"

[node name="SolidCollision" type="CollisionShape2D" parent="PickupableWeapon"]
position = Vector2(3.5, 0)
shape = SubResource("CircleShape2D_vxkd3")
disabled = true

[node name="PickUp" type="Sprite2D" parent="."]
position = Vector2(0, -42)
scale = Vector2(0.94117653, 1)
texture = ExtResource("6_vxkd3")

[connection signal="hit" from="DamageDealer" to="." method="on_dealt_damage"]
[connection signal="picked_up" from="PickupableWeapon" to="." method="on_picked_up"]
